# btrbk-gui

./: .gitignore  Makefile.am  README.md  btrbkgui.desktop  configure.ac  execute_btrbk.sh  infowin.glade  null.d
src/: Makefile  Makefile.am  Makefile.in  actions.cpp  actions.h  btrbkgui  infowin.cpp  infowin.h  installdir.cpp  installdir.h  logfile.cpp  logfile.h  logmsg.cpp  logmsg.h  logwatch.cpp  logwatch.h  main.cpp  stateicon.cpp  stateicon.h  tools.cpp  tools.h  watchthreads.cpp  watchthreads.h
