# sudo apt install autoconf-archive
AC_INIT([btrbkgui], 1.0)
AM_INIT_AUTOMAKE
AC_PROG_CC
AC_PROG_CXX
AX_PTHREAD
PKG_CHECK_MODULES(GTK, gtkmm-3.0 >= 3.0)
PKG_CHECK_MODULES(APPINDICATOR, appindicator3-0.1)
LIBS="$PTHREAD_LIBS $GTK_LIBS $APPINDICATOR_LIBS $LIBS"
CXXFLAGS="$CXXFLAGS $PTHREAD_CFLAGS $GTK_CFLAGS $APPINDICATOR_CFLAGS"
AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT